# gde2-applets

./: AUTHORS  Makefile.am  NEWS  NEWS.GNOME  README  autogen.sh  configure.ac
accessx-status/: Makefile.am  applet.c  applet.h  org.gde2.applets.AccessxStatusApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.AccessxStatusAppletFactory.service.in
accessx-status/docs/: Makefile.am
accessx-status/docs/C/: index.docbook
accessx-status/docs/bg/: bg.po
accessx-status/docs/ca/: ca.po
accessx-status/docs/cs/: cs.po
accessx-status/docs/de/: de.po
accessx-status/docs/el/: el.po
accessx-status/docs/en_GB/: en_GB.po
accessx-status/docs/es/: es.po
accessx-status/docs/eu/: eu.po
accessx-status/docs/fi/: fi.po
accessx-status/docs/fr/: fr.po
accessx-status/docs/gl/: gl.po
accessx-status/docs/it/: it.po
accessx-status/docs/ko/: ko.po
accessx-status/docs/nl/: nl.po
accessx-status/docs/oc/: oc.po
accessx-status/docs/sv/: sv.po
accessx-status/docs/uk/: uk.po
accessx-status/docs/zh_CN/: zh_CN.po
accessx-status/pixmaps/: Makefile.am
charpick/: Makefile.am  charpick.c  charpick.h  org.gde2.applets.CharpickerApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.CharpickerAppletFactory.service.in  org.gde2.panel.applet.charpick.gschema.xml.in  properties.c
charpick/help/: Makefile.am
charpick/help/C/: index.docbook
charpick/help/bg/: bg.po
charpick/help/ca/: ca.po
charpick/help/cs/: cs.po
charpick/help/de/: de.po
charpick/help/el/: el.po
charpick/help/en_GB/: en_GB.po
charpick/help/es/: es.po
charpick/help/eu/: eu.po
charpick/help/fi/: fi.po
charpick/help/fr/: fr.po
charpick/help/it/: it.po
charpick/help/ko/: ko.po
charpick/help/nl/: nl.po
charpick/help/oc/: oc.po
charpick/help/pt_BR/: pt_BR.po
charpick/help/ru/: ru.po
charpick/help/sv/: sv.po
charpick/help/uk/: uk.po
charpick/help/zh_CN/: zh_CN.po
command/: Makefile.am  command.c  org.gde2.panel.applet.CommandAppletFactory.service.in  org.gde2.panel.applet.command.gschema.xml.in
cpufreq/: Makefile.am  README  org.gde2.applets.CPUFreqApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.CPUFreqAppletFactory.service.in  org.gde2.panel.applet.cpufreq.gschema.xml.in
cpufreq/help/: Makefile.am  gde2-cpufreq-applet.omf.in
cpufreq/help/C/: index.docbook
cpufreq/help/ca/: ca.po
cpufreq/help/cs/: cs.po
cpufreq/help/de/: de.po
cpufreq/help/el/: el.po
cpufreq/help/en_GB/: en_GB.po
cpufreq/help/es/: es.po
cpufreq/help/eu/: eu.po
cpufreq/help/fi/: fi.po
cpufreq/help/fr/: fr.po
cpufreq/help/hu/: hu.po
cpufreq/help/nl/: nl.po
cpufreq/help/oc/: oc.po
cpufreq/help/pt_BR/: pt_BR.po
cpufreq/help/ru/: ru.po
cpufreq/help/sv/: sv.po
cpufreq/help/uk/: uk.po
cpufreq/help/zh_CN/: zh_CN.po
cpufreq/help/zh_HK/: zh_HK.po
cpufreq/help/zh_TW/: zh_TW.po
cpufreq/pixmaps/: Makefile.am
cpufreq/src/: Makefile.am  cpufreq-applet.c  cpufreq-applet.h  cpufreq-monitor-cpuinfo.c  cpufreq-monitor-cpuinfo.h  cpufreq-monitor-factory.c  cpufreq-monitor-factory.h  cpufreq-monitor-libcpufreq.c  cpufreq-monitor-libcpufreq.h  cpufreq-monitor-procfs.c  cpufreq-monitor-procfs.h  cpufreq-monitor-sysfs.c  cpufreq-monitor-sysfs.h  cpufreq-monitor.c  cpufreq-monitor.h  cpufreq-popup.c  cpufreq-popup.h  cpufreq-prefs.c  cpufreq-prefs.h  cpufreq-selector.c  cpufreq-selector.h  cpufreq-utils.c  cpufreq-utils.h
cpufreq/src/cpufreq-selector/: Makefile.am  cpufreq-selector-factory.c  cpufreq-selector-factory.h  cpufreq-selector-libcpufreq.c  cpufreq-selector-libcpufreq.h  cpufreq-selector-procfs.c  cpufreq-selector-procfs.h  cpufreq-selector-service.c  cpufreq-selector-service.h  cpufreq-selector-service.xml  cpufreq-selector-sysfs.c  cpufreq-selector-sysfs.h  cpufreq-selector.c  cpufreq-selector.h  main.c  org.gde2.CPUFreqSelector.conf  org.gde2.CPUFreqSelector.service.in  org.gde2.cpufreqselector.policy.in
drivemount/: Makefile.am  drive-button.c  drivemount.c  org.gde2.applets.DriveMountApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.DriveMountAppletFactory.service.in
drivemount/help/: Makefile.am
drivemount/help/C/: index.docbook
gde2weather/: Makefile.am  gde2weather-about.c  gde2weather-about.h  gde2weather-applet.c  gde2weather-applet.h  gde2weather-dialog.c  gde2weather-dialog.h  gde2weather-pref.c  gde2weather-pref.h  gde2weather.h  main.c  org.gde2.applets.Gde2WeatherApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.MateWeatherAppletFactory.service.in
gde2weather/docs/: Makefile.am
geyes/: Makefile.am  README.themes  geyes.c  geyes.h  org.gde2.applets.GeyesApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.GeyesAppletFactory.service.in  org.gde2.panel.applet.geyes.gschema.xml.in  themes.c
geyes/docs/: Makefile.am
invest-applet/data/: Makefile.am  org.gde2.applets.InvestApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.InvestAppletFactory.service.in
multiload/: Makefile.am  autoscaler.h  global.h  load-graph.c  main.c  org.gde2.applets.MultiLoadApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.MultiLoadAppletFactory.service.in  org.gde2.panel.applet.multiload.gschema.xml.in  properties.c
multiload/docs/: Makefile.am
netspeed/data/: Makefile.am  netspeed-menu.xml  org.gde2.applets.NetspeedApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.NetspeedAppletFactory.service.in  org.gde2.panel.applet.netspeed.gschema.xml.in
netspeed/src/: Makefile.am  backend.c  netspeed.c
stickynotes/: Makefile.am  README  org.gde2.applets.StickyNotesApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.StickyNotesAppletFactory.service.in  org.gde2.stickynotes.gschema.xml.in  stickynotes.c  stickynotes_applet.c  stickynotes_applet.h  stickynotes_applet_callbacks.c  stickynotes_applet_callbacks.h
stickynotes/docs/: Makefile.am
stickynotes/pixmaps/: Makefile.am
timerapplet/: Makefile.am  org.gde2.applets.TimerApplet.gde2-panel-applet.in.in  org.gde2.panel.applet.TimerAppletFactory.service.in  org.gde2.panel.applet.timer.gschema.xml.in  timerapplet.c
trashapplet/src/: Makefile.am  trash-empty.c  trashapplet.c  xstuff.c  xstuff.h
(+320 files in other folders)
