@YELP_HELP_RULES@

HELP_ID = gde2weather
HELP_FILES = index.docbook legal.xml

HELP_MEDIA = figures/gde2weather_applet.png \
		figures/gde2weather-details.png \
		figures/gde2weather-menu-prefs.png \
		figures/gde2weather-prefs-general.png \
		figures/gde2weather-prefs-locations.png \
		figures/stock_weather-cloudy.png \
		figures/stock_weather-few-clouds.png \
		figures/stock_weather-fog.png \
		figures/stock_weather-night-clear.png \
		figures/stock_weather-night-few-clouds.png \
		figures/stock_weather-showers.png \
		figures/stock_weather-snow.png \
		figures/stock_weather-storm.png \
		figures/stock_weather-sunny.png

HELP_LINGUAS = ar ca cs de el en_GB es eu fi fr ko nl oc pa pt_BR ru sv uk zh_CN

-include $(top_srcdir)/git.mk
